<?php


abstract class DeviceManufacturer
{
   abstract public function addUser();
   abstract public function modifyDeviceValues();

}