<?php


class DevicePurchaser
{

}