<?php


namespace Device;


class Motor
{

}